--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
   <body>
     <hr>
 
-    <img src="images/headshot.jpg" alt="Harrison Kong's headshot" width="20%">
+    <img src="images/headshot.jpg" alt="AYAABA BABA " width="20%">
 
     <h1>Harrison Kong</h1>
     <h4>Senior UX, Mobile App, Website Software Engineer</h4>
