--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 
     <img src="images/headshot.jpg" alt="AYAABA BABA " width="20%">
 
-    <h1>Harrison Kong</h1>
+    <h1>AYAABA BABA KENNETH</h1>
     <h4>Senior UX, Mobile App, Website Software Engineer</h4>
 
     <p>Email: <a href="mailto:ayaaba366@gmail.com" target="_blank">harrisonkong@skyroute66.com</a></p>
