--- a/resume.html
+++ b/resume.html
@@ -22,11 +22,11 @@
     <h1>AYAABA BABA KENNETH</h1>
     <h4>Senior UX, Mobile App, Website Software Engineer</h4>
 
-    <p>Email: <a href="mailto:ayaaba366@gmail.com" target="_blank">harrisonkong@skyroute66.com</a></p>
+    <p>Email: <a href="mailto:ayaaba366@gmail.com" target="_blank">ayaaba366@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
-      <h3>GitHub: <a href="https://github.com/ayaabasite" target="_blank">https://github.com/harrisonkong</a></h3>
+      <h3>GitHub: <a href="https://github.com/ayaabasite" target="_blank">https://github.com/ayaabasite</a></h3>
 
     <h2>Education</h2>
 
