--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <body>
-    <img src="images/banner.jpg" width="50%" alt="banner">
+    <img src="images/imag1.jpg" width="50%" alt="banner">
     <br>
     <h1> AYAABA BABA KENNETH's PORTAL </h1>
       <h2> About me</h2>
