--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p> hstaydgsy hsdyufhrgur viduifwjgwn iuigtkugerjger kugirjie </p>
       <p> ytdyywyrewur werufyurhguerg gejrgierjyirenrenkrueigt yhetu8ekjirug kugji</p>
       <h2> Credentials and Portfolio</h2>
-        <p><a href="resume.html"> My Resume</a> |<a href="http://github.com/ayaabasite"> My GitHub</a> | <a href="linkedin.com/in/ayaaba-baba-1509171b3"> LinkedIn</a></p>
+        <p><a href="resume.html"> My Resume</a> |<a href="http://github.com/ayaabasite"> My GitHub</a> | <a href="https://linkedin.com/in/ayaaba-baba-1509171b3"> LinkedIn</a></p>
         <h2> Contact</h2>
         <p> Email: <a href=" mailto:ayaaba366@gmail.com">ayaaba366@gmail.com</a></p>
 
